magic-about from Nick

--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -254,7 +254,7 @@ table {
             <tr>
 
                 <td width=33%>
-                    <div title="These objects are described using the structured data on the web patterns promoted by the ESIP Science on Schema work. The object landing pages implement FAIR data practices and expose stuctured data in JSON-LD. [4136 records]">
+                    <div title="The Magnetics Information Consortium (MagIC) improves research capacity in the Earth and Ocean sciences by maintaining an open community digital data repository for rock and paleomagnetic data with portals that allow users access to archive, search, visualize, download, and combine these versioned datasets. [4136 records]">
 												<a href=https://www.earthref.org/MagIC><center><img style="max-width: 180px; max-height: 90px"
 																																		src=images/repo/magic.png><br>
 
