current version records for magic

--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -257,7 +257,7 @@ table {
 																																		src=images/repo/magic.png><br>
 
                             Magnetics Information Consortium (MagIC)</a>
-												<br><small>[4136 records]</small></center></td>
+												<br><small>[2876 current records]</small></center></td>
 										</div>
 
                 <td width=33%>
