--- a/alpha/website/landing.html
+++ b/alpha/website/landing.html
@@ -8,6 +8,7 @@
     <title>Earthcube</title>
 
     <link rel="stylesheet" href="./css/bootstrap.css"/>
+	  <link rel="icon" sizes="192x192" href="https://static.wixstatic.com/media/a8b87d_e49be51963cb4e7eb47641ec7eee5f2d%7Emv2.png/v1/fill/w_32%2Ch_32%2Clg_1%2Cusm_0.66_1.00_0.01/a8b87d_e49be51963cb4e7eb47641ec7eee5f2d%7Emv2.png">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
