--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Dataset:</title>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet"/>
+	  <link rel="icon" sizes="192x192" href="https://static.wixstatic.com/media/a8b87d_e49be51963cb4e7eb47641ec7eee5f2d%7Emv2.png/v1/fill/w_32%2Ch_32%2Clg_1%2Cusm_0.66_1.00_0.01/a8b87d_e49be51963cb4e7eb47641ec7eee5f2d%7Emv2.png">
 
     <title>Earthcube</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
