--- a/alpha/website/landing.html
+++ b/alpha/website/landing.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet"/>
 
-    <title>Earthcube</title>
+    <title>EarthCube</title>
 
     <link rel="stylesheet" href="./css/bootstrap.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
