make title for landing/search in style of earthcube.org/geocodes

--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet"/>
 
-    <title>EarthCube Search</title>
+    <title>Search | GeoCODES</title>
 
     <link rel="stylesheet" href="./css/bootstrap.css"/>
 <!--    <link rel="stylesheet" href="./css/bootstrap.css"/>-->
